DEMO-150: citypairs does not fit in the line - fixed

--- a/src/assets/styles/scott.css
+++ b/src/assets/styles/scott.css
@@ -191,8 +191,10 @@ body {
 
 .selected {
   font-weight: normal;
+  /*
   background-color: #9acfea !important;
   border-color: #E3F0DF;
+  */
 }
 
 .disabled {
@@ -239,16 +241,12 @@ body {
   padding-top: 10px;
 }
 
-.row.itinerary {
-  margin-left: 0;
-}
-
 .itinerary {
   background-color: #ffffff;
   border-top: 1px solid #E8E8E8;
   /*border-bottom: 1px solid #E8E8E8;*/
   font-family: WhitneyHTF-BookCondensed;
-  font-size: 15px;
+  font-size: 14px;
   line-height: 0.9;
   letter-spacing: 0.3px;
   color: #333333;
@@ -290,10 +288,11 @@ body {
 
 .itinerary-info {
   padding-top: 7px;
+  margin: 0 -10px;
   clear: both;
 }
 
-.itinerary-info>div {
+.itinerary-info > div {
   margin-bottom: 4px;
   padding: 0;
 }
@@ -301,10 +300,10 @@ body {
 .buy-button {
   /*padding-left: 15px;*/
   /*padding-right:  15px;*/
-  padding-left: 3px;
+  padding-right: 3px;
 }
 
-.buy-button>button {
+.buy-button > button {
   font-family: WhitneyHTF-BookCondensed;
   font-size: 16px;
   line-height: 1.3;
@@ -790,4 +789,8 @@ body.loading .modal {
 .divider {
   /*background-color:white !important;*/
   border: 1px dotted grey;
+}
+
+#form_booking div.panel {
+  margin-top: 20px;
 }
